# rime-subway-dict

./: .gitignore  LICENSE  README.md  README.zh-CN.md  all.subway.dict.yaml  aomen.subway.dict.yaml  beijing.subway.dict.yaml  changchun.subway.dict.yaml  changsha.subway.dict.yaml  changzhou.subway.dict.yaml  chengdu.subway.dict.yaml  chongqing.subway.dict.yaml  chuzhou.subway.dict.yaml  dalian.subway.dict.yaml  dongguan.subway.dict.yaml  ezhou.subway.dict.yaml  foshan.subway.dict.yaml  fuzhou.subway.dict.yaml  gaoxiong.subway.dict.yaml  guangzhou.subway.dict.yaml  guiyang.subway.dict.yaml  haerbin.subway.dict.yaml  hangzhou.subway.dict.yaml  hefei.subway.dict.yaml  huhehaote.subway.dict.yaml  jinan.subway.dict.yaml  jinhua.subway.dict.yaml  kunming.subway.dict.yaml  lanzhou.subway.dict.yaml  luoyang.subway.dict.yaml  nanchang.subway.dict.yaml  nanjing.subway.dict.yaml  nanning.subway.dict.yaml  nantong.subway.dict.yaml  ningbo.subway.dict.yaml  pyproject.toml  qingdao.subway.dict.yaml  qingyuan.subway.dict.yaml  shanghai.subway.dict.yaml  shaoxing.subway.dict.yaml  (+24 more)
.github/workflows/: update.yml
docs/superpowers/plans/: 2026-06-16-rime-subway-dict.md
docs/superpowers/specs/: 2026-06-16-rime-subway-dict-design.md
scripts/: generate.py  overrides.toml
tests/: test_generate.py
