[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rime-subway-dict"
version = "0.1.0"
description = "Generate Rime dictionaries for subway station names."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pypinyin>=0.51",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
